fix: double scrollbar

--- a/apps/gauzy/src/app/pages/accounting-templates/accounting-templates.component.scss
+++ b/apps/gauzy/src/app/pages/accounting-templates/accounting-templates.component.scss
@@ -2,11 +2,11 @@
 
 :host {
   .ace-editor {
-    height: calc(100vh - 24rem) !important;
+    height: calc(100vh - 23rem) !important;
   }
 
   .custom-parent-email-content {
-    height: calc(100vh - 26.3rem) !important;
+    height: calc(100vh - 25.3rem) !important;
   }
 
   .custom-preview-template{
